<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E8F5E9"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="false"
        android:text="WIFI - CREDENTIALS"
        android:padding="20dp"
        android:background="@color/myPrimaryDarkColor"
        android:textAlignment="center"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/username"
        android:textColor="@color/text_color"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColorHint="@color/text_hint_color"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/password"
        android:textColor="@color/text_color"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/text_hint_color"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>
</LinearLayout>